test/sema/negative/subtyping5.impala
trait T {}
trait U {}

fn main(x: fn[A: T]([int*2], A)) -> () {
    let y : fn[A: U]([int], A) = x;
}
